@@ -1,6 +1,6 @@
 Package: nlme
-Version: 3.1-58
-Date: 2005-05-20
+Version: 3.1-60
+Date: 2005-06-08
 Priority: recommended
 Title: Linear and nonlinear mixed effects models
 Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
@@ -14,4 +14,4 @@ Imports: lattice
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later
-Packaged: Fri May 20 10:23:09 2005; bates
+Packaged: Wed Jun  8 09:23:29 2005; bates
